# professional-python

./: LICENSE  README.md
01-package-management/: README.md
02-gitignore/: README.md  pyproject.toml
03-linter-formatter-typechecks/: pyproject.toml
04-licenses/: README.md  pyproject.toml
04-licenses/docs/templates/: sbom.md.jinja
05-continuous-integration/: .gitignore  Taskfile.yaml
06-pre-commit-hooks/: README.md  pyproject.toml
07-unit-testing/: README.md
08-docs/: README.md
08-docs/docs/: faq.md  index.md  quick_start.md
09-commits-and-changelog/: .gitignore  README.md  mkdocs.yml
09-commits-and-changelog/docs/: changelog.md  source_code.md
1-package-management/: README.md
10-cli/: README.md
10-cli/deathstar/: test_laser.py
11-git-workflow/: README.md  Taskfile.yaml  pyproject.toml
11-git-workflow/deathstar/: test_laser.py
11-git-workflow/deathstar/cli/: __main__.py
12-api/: LICENSE  README.md  Taskfile.yaml
12-api/deathstar/: api.py  laser.py
12-api/deathstar/cli/: api.py  laser.py
13-docker/: Dockerfile  README.md  Taskfile.yaml  pyproject.toml
13-docker/.github/workflows/: python-lint-test-upload.yml
13-docker/deathstar/: database.py
13-docker/deathstar/cli/: main.py
2-gitignore/: .gitignore
3-linter-formatter-typechecks/: README.md  Taskfile.yaml  pyproject.toml
4-licenses/: README.md  pyproject.toml
4-pre-commit-hooks/: .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
5-continuous-integration/: README.md
5-continuous-integration/.github/workflows/: python-lint-test-upload.yml
6-pre-commit-hooks/: .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
6-pre-commit-hooks/deathstar/: laser.py
7-unit-testing/: README.md  Taskfile.yaml  pyproject.toml
7-unit-testing/.github/workflows/: python-lint-test-upload.yml
7-unit-testing/deathstar/: test_laser.py
8-docs/: .gitignore  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml
8-docs/.github/workflows/: python-lint-test-upload.yml
9-commits-and-changelog/: .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
9-commits-and-changelog/.github/workflows/: python-lint-test-upload.yml
9-commits-and-changelog/deathstar/: laser.py
9-docs/: README.md  pyproject.toml
task1-weather/: weather.py
